[mod] renamed to Sonata in E minor

--- a/buildfiles/makefile
+++ b/buildfiles/makefile
@@ -1,5 +1,5 @@
-all : Sonatina_in_E_minor.ly
-	lilypond Sonatina_in_E_minor.ly
+all : Sonata_in_E_minor.ly
+	lilypond Sonata_in_E_minor.ly
 
 score :	./Pieces/title_page.pdf Sonata_in_E_minor.pdf 
 	gs -q -dNOPAUSE -dBATCH -sDEVICE=pdfwrite -sOutputFile=./../newscore.pdf ./Pieces/title_page.pdf Sonata_in_E_minor.pdf
